--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -3,19 +3,33 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --lite: #ffffff;
+  --dark: #080808;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  background: var(--dark);
   font-family: Arial, Helvetica, sans-serif;
+  padding: 0 6.25%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+header {
+  max-width: 1200px;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #1b1b1b;
+  color: #9c9c9c;
+  font-size: 16px;
+  border-radius: 0 0 10px 10px;
 }
