--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -3,8 +3,11 @@
 @tailwind utilities;
 
 :root {
-  --lite: #ffffff;
-  --dark: #080808;
+  --white: #ffffff;
+  --black: #080808;
+  --foot_header_black: #1b1b1b;
+  --grey: #9c9c9c;
+  --green: #3f8e00;
 }
 
 html {
@@ -12,24 +15,31 @@ html {
 }
 
 body {
-  background: var(--dark);
+  background: var(--black);
   font-family: Arial, Helvetica, sans-serif;
-  padding: 0 6.25%;
   box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 header {
-  max-width: 1200px;
+  position: fixed;
   width: 100%;
-  height: 70px;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #1b1b1b;
-  color: #9c9c9c;
+  padding: 0 6.25%;
+}
+
+main {
+  padding: 0 6.25%;
+}
+
+footer {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--foot_header_black);
+  color: var(--grey);
   font-size: 16px;
-  border-radius: 0 0 10px 10px;
 }
