--- a/frontend/components/Navigation/Navigation.module.css
+++ b/frontend/components/Navigation/Navigation.module.css
@@ -1,3 +1,21 @@
+.nav {
+  max-width: 1200px;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: var(--foot_header_black);
+  color: var(--grey);
+  font-size: 16px;
+  border-radius: 0 0 10px 10px;
+}
+
 .active_item {
-  color: var(--lite);
+  color: var(--white);
+}
+
+.item:hover {
+  color: var(--white);
+  transition: 0.5s;
 }
