--- a/frontend/components/Home/Home.module.css
+++ b/frontend/components/Home/Home.module.css
@@ -2,10 +2,10 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 
 .introduction {
+  margin-top: 25vh;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -37,11 +37,29 @@
   color: var(--white);
   word-spacing: 5px;
   border-radius: 4px;
-  border: 1px solid #62ba1b;
+  border: 1px solid var(--lite_green);
   box-sizing: border-box;
-  box-shadow: 1px 1px 5px #62ba1b, -1px 1px 20px #62ba1b;
+  box-shadow: 1px 1px 5px var(--lite_green), -1px 1px 20px var(--lite_green);
+  transition: 0.5s;
 }
 
-.clients h3 {
+.start_btn:hover {
+  border: none;
+  background: rgba(0, 0, 0, 0);
+  color: var(--lite_green);
+}
+
+.partners {
+  position: absolute;
+  bottom: 5vh;
+}
+
+.partners h3 {
   color: var(--white);
+}
+
+.partners_row {
+  margin-top: 10px;
+  display: flex;
+  gap: 20px;
 }
